--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href \"/cargill_ghrs/ghrs/\"",
+    "build": "ng build --base-href '/cargill_ghrs/ghrs/'",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
